analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/labelMultiple.kt
fun main() {
    OuterLoop1@ OuterLoop2@ while (true) {
        <expr>var j = 1</expr>
    }
}